--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,6 @@
     width: 464.9px;
     height: 50px;
     border: 2px solid #E53F23;
-    border-radius: ;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -109,3 +108,69 @@
     align-items: center;
     border-radius: 8px;
 }
+.statistics {
+    width: 1024px;
+    height: 212px;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.goals {
+    width: 460px;
+    height: 78px;
+    border-bottom: 1px solid #707070;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.assists {
+    width: 460px;
+    height: 57px;
+    border-bottom: 1px solid #707070;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.plus {
+    width: 460px;
+    height: 77px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.shots {
+    width: 460px;
+    height: 78px;
+    border-bottom: 1px solid #707070;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.blocks {
+    width: 460px;
+    height: 134px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+.details {
+    background-color: #191515;
+    color: #FFFFFF;
+    width: 1024px;
+    height: 64.99px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.history {
+    background-color: #191515;
+    color: #FFFFFF;
+    width: 1024px;
+    height: 64.99px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 3px;
+}
+    
